Fix layout issue

--- a/src/assets/scss/custom/_rsuite.scss
+++ b/src/assets/scss/custom/_rsuite.scss
@@ -277,7 +277,10 @@
     border-radius: 10px !important;
 }
 
-.rs-table-row-header .rs-table-cell {
+.rs-table
+
+.rs-table-row-header 
+.rs-table-cell {
     background-color: $secondary-green;
     color: white;
     font-size: 16px;
